--- a/SNMP_Network.conf
+++ b/SNMP_Network.conf
@@ -2,7 +2,19 @@
        Type "if_octets"
        Table true
        Instance "IF-MIB::ifDescr"
-       Values "IF-MIB::ifInOctets" "IF-MIB::ifOutOctets" "IF-MIB::ifOutErrors" "IF-MIB::ifInErrors" "IF-MIB::ifInDiscards" "IF-MIB::ifOutDiscards"
+       Values "IF-MIB::ifInOctets" "IF-MIB::ifOutOctets"
+   </Data>
+      <Data "errors">
+       Type "if_octets"
+       Table true
+       Instance "IF-MIB::ifDescr"
+       Values "IF-MIB::ifInErrors" "IF-MIB::ifOutErrors" 
+   </Data>
+   <Data "discards">
+       Type "if_octets"
+       Table true
+       Instance "IF-MIB::ifDescr"
+       Values "IF-MIB::ifOutDiscards" "IF-MIB::ifInDiscards"
    </Data>
    <Data "CPU_CP">
        Type "count"
